--- a/css/_item-giphy-suggested.scss
+++ b/css/_item-giphy-suggested.scss
@@ -1,4 +1,4 @@
-.div-results_suggested{
+#div-results_suggested{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;   
