--- a/css/_section-search.scss
+++ b/css/_section-search.scss
@@ -40,18 +40,26 @@ body{
                         
 
                     }
-                    button{
+                    #btn{
                         width: 12%;
-                                            
-                        p{  
-                            vertical-align: center;
-                            padding: 8px 4px;
-                            margin: 1px 1px;
-                            font-size: 16px;
-                            font-family: var(--font-family-principal);
-                            
+
+                        div{
+                            display: flex;
+                            flex-flow: row nowrap;
+                            justify-content: space-evenly;
+                            align-items: center;
+                            margin: 1px;
+
+                                                                    
+                            p{  
+                                
+                                padding: 8px 1px;                               
+                                font-size: 16px;
+                                font-family: var(--font-family-principal);                                     
+                                
+                            }
                         }
-                                               
+                                                
                     }
 
                     .enable{
@@ -60,9 +68,9 @@ body{
                         border: 1px solid #110038;
                         box-shadow: var(--box-shadow-button);
                         background-color: var(--color-background-button);
-                        color: var(--color-font-button1);
+                        color: var(--color-font-button);
 
-                        &:hover > p{
+                        &:hover > div{
                             border: 1px dashed #110038;
                         }
 
@@ -70,6 +78,10 @@ body{
                             
                             background-color: var(--color-background-button-hover);
                             box-shadow: var(--box-shadow-button-hover);
+                        }
+                        
+                        .lupa{
+                            fill: #110038;                                
                         }
 
                     }
