--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -40,6 +40,13 @@
 --color-background-button-gif: #4180F6;
 --box-shadow-button-gif: inset -1px -1px 0 0 #284F99, inset 1px 1px 0 0 #FFFFFF;
 
+//Variables Create Gif
+--border-box-button-create-gif: 1px solid #110038;
+
+//Variables Icons
+--color-dropdown: #110038;
+--color-lupa: #B4B4B4;
+
 }
 
 
