--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,9 +5,11 @@
 @import 'section-search';
 @import 'results-suggested';
 @import 'top-input-section';
-@import 'item-giphy-search';
-@import 'item-giphy-trends';
+@import 'item-giphy-trends-results';
+@import 'item-giphy-suggested';
 @import 'create-gif';
+@import 'video_show';
+@import 'icons';
 
 
 
