--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,10 @@
   --color-border-top-input-section: 1px solid #E6BBE2;
   --box-shadow-top-input-section: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
   --color-background-button-gif: #4180F6;
-  --box-shadow-button-gif: inset -1px -1px 0 0 #284F99, inset 1px 1px 0 0 #FFFFFF; }
+  --box-shadow-button-gif: inset -1px -1px 0 0 #284F99, inset 1px 1px 0 0 #FFFFFF;
+  --border-box-button-create-gif: 1px solid #110038;
+  --color-dropdown: #110038;
+  --color-lupa: #B4B4B4; }
 
 body .top_bar {
   margin: 1px 0px;
@@ -164,24 +167,30 @@ body .contenedor .contenedor_center .search_input {
       margin: 12px 0;
       font-family: var(--font-family-principal);
       color: var(--color-font-button1); }
-    body .contenedor .contenedor_center .search_input #input_button_search button {
+    body .contenedor .contenedor_center .search_input #input_button_search #btn {
       width: 12%; }
-      body .contenedor .contenedor_center .search_input #input_button_search button p {
-        vertical-align: center;
-        padding: 8px 4px;
-        margin: 1px 1px;
-        font-size: 16px;
-        font-family: var(--font-family-principal); }
+      body .contenedor .contenedor_center .search_input #input_button_search #btn div {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 1px; }
+        body .contenedor .contenedor_center .search_input #input_button_search #btn div p {
+          padding: 8px 1px;
+          font-size: 16px;
+          font-family: var(--font-family-principal); }
     body .contenedor .contenedor_center .search_input #input_button_search .enable {
       border: 1px solid #110038;
       box-shadow: var(--box-shadow-button);
       background-color: var(--color-background-button);
-      color: var(--color-font-button1); }
-      body .contenedor .contenedor_center .search_input #input_button_search .enable:hover > p {
+      color: var(--color-font-button); }
+      body .contenedor .contenedor_center .search_input #input_button_search .enable:hover > div {
         border: 1px dashed #110038; }
       body .contenedor .contenedor_center .search_input #input_button_search .enable:hover {
         background-color: var(--color-background-button-hover);
         box-shadow: var(--box-shadow-button-hover); }
+      body .contenedor .contenedor_center .search_input #input_button_search .enable .lupa {
+        fill: #110038; }
 
 body .contenedor .contenedor_center .search_input #results_suggested {
   display: flex;
@@ -210,9 +219,9 @@ body .contenedor .contenedor_center .search_input #results_suggested {
   body .contenedor .contenedor_center .search_input #results_suggested .div_empty {
     width: 12%; }
 
-body .contenedor .contenedor_center #section-results-suggested, body .contenedor .contenedor_center #section-results-trends {
+body .contenedor .contenedor_center #section-results-suggested, body .contenedor .contenedor_center #section-results-trends, body .contenedor .contenedor_center #section-results-search {
   margin-top: 64px; }
-  body .contenedor .contenedor_center #section-results-suggested .top_input_section, body .contenedor .contenedor_center #section-results-trends .top_input_section {
+  body .contenedor .contenedor_center #section-results-suggested .top_input_section, body .contenedor .contenedor_center #section-results-trends .top_input_section, body .contenedor .contenedor_center #section-results-search .top_input_section {
     font-family: var(--font-family-principal);
     color: var(--color-font-button1);
     font-size: 14px;
@@ -223,22 +232,22 @@ body .contenedor .contenedor_center #section-results-suggested, body .contenedor
     box-shadow: var(--box-shadow-top-input-section);
     padding: 7px 0px 7px 7px; }
 
-.div-results_trends {
+.div-results_trends, .div-results_search {
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 20px; }
-  .div-results_trends .item-giphy-search {
+  .div-results_trends .item-giphy-search, .div-results_search .item-giphy-search {
     margin-bottom: 16px; }
 
-.div-results_suggested {
+#div-results_suggested {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   margin-top: 20px; }
-  .div-results_suggested .div_item {
+  #div-results_suggested .div_item {
     background-color: var(--color-background-boxmenu);
     box-shadow: var(--box-shadow-boxmenu);
     padding: 4px;
@@ -246,22 +255,22 @@ body .contenedor .contenedor_center #section-results-suggested, body .contenedor
     flex-flow: column nowrap;
     justify-content: space-between;
     position: relative; }
-    .div-results_suggested .div_item .top_item {
+    #div-results_suggested .div_item .top_item {
       background: var(--color-background-bar);
       background: var(--color-gradient-bar);
       width: 280px;
       margin-bottom: 4px;
       display: inline-flex;
       justify-content: space-between; }
-      .div-results_suggested .div_item .top_item h2 {
+      #div-results_suggested .div_item .top_item h2 {
         color: var(--color-font-top-bar);
         font-size: 12px;
         font-weight: 400; }
-      .div-results_suggested .div_item .top_item .close_svg {
+      #div-results_suggested .div_item .top_item .close_svg {
         width: 16px; }
-    .div-results_suggested .div_item .item-giphy-trends:hover {
+    #div-results_suggested .div_item .item-giphy-trends:hover {
       border: 1px dashed #110038; }
-    .div-results_suggested .div_item #see_more_button {
+    #div-results_suggested .div_item #see_more_button {
       position: absolute;
       left: 12px;
       top: 250px;
@@ -273,18 +282,112 @@ body .contenedor .contenedor_center #section-results-suggested, body .contenedor
       color: var(--color-font-top-bar);
       font-size: 14px;
       cursor: pointer; }
-      .div-results_suggested .div_item #see_more_button:hover {
+      #div-results_suggested .div_item #see_more_button:hover {
         border: 1px dashed #110038; }
 
-#section_create_gif {
+.section_create_gif,
+#section_video_show {
   display: flex;
   flex-flow: row wrap;
   justify-content: center; }
-  #section_create_gif .create_gif {
-    max-width: 684px;
-    max-height: 386px;
-    width: 47.5%;
+  .section_create_gif .create_gif,
+  #section_video_show .create_gif {
+    width: 55%;
     height: 35.9%; }
+    .section_create_gif .create_gif .box_create_gif,
+    #section_video_show .create_gif .box_create_gif {
+      margin: 30px 93px 28px 73px;
+      position: relative; }
+      .section_create_gif .create_gif .box_create_gif::before,
+      #section_video_show .create_gif .box_create_gif::before {
+        content: url(../img/window_img.png);
+        display: block;
+        position: absolute;
+        left: -45px; }
+      .section_create_gif .create_gif .box_create_gif h3,
+      #section_video_show .create_gif .box_create_gif h3 {
+        font-family: var(--font-family-principal);
+        font-weight: bold;
+        font-size: 16px;
+        letter-spacing: 0;
+        color: var(--color-font-button);
+        margin-bottom: 17px; }
+      .section_create_gif .create_gif .box_create_gif p,
+      #section_video_show .create_gif .box_create_gif p {
+        font-family: var(--font-family-principal);
+        font-size: 14px;
+        letter-spacing: 0;
+        line-height: 30px;
+        color: var(--color-font-button); }
+        .section_create_gif .create_gif .box_create_gif p .italic_span,
+        #section_video_show .create_gif .box_create_gif p .italic_span {
+          font-weight: bold;
+          font-style: italic; }
+        .section_create_gif .create_gif .box_create_gif p .h3_span,
+        #section_video_show .create_gif .box_create_gif p .h3_span {
+          font-family: var(--font-family-principal);
+          font-weight: bold;
+          font-size: 16px;
+          letter-spacing: 0;
+          color: var(--color-font-button);
+          margin-bottom: 17px; }
+    .section_create_gif .create_gif .create_gif_button,
+    #section_video_show .create_gif .create_gif_button {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: flex-end;
+      margin-right: 36px;
+      margin-bottom: 36px; }
+      .section_create_gif .create_gif .create_gif_button .button_white,
+      #section_video_show .create_gif .create_gif_button .button_white {
+        font-family: var(--font-family-principal);
+        color: var(--color-font-button1);
+        width: 144px;
+        height: 36px;
+        font-size: 16px;
+        box-shadow: var(--box-shadow-button);
+        border: var(--border-box-button-create-gif);
+        margin-right: 16px;
+        background-color: var(--color-background-button1-menu);
+        cursor: pointer; }
+      .section_create_gif .create_gif .create_gif_button .button_pink,
+      #section_video_show .create_gif .create_gif_button .button_pink {
+        font-family: var(--font-family-principal);
+        color: var(--color-font-button1);
+        width: 144px;
+        height: 36px;
+        font-size: 16px;
+        box-shadow: var(--box-shadow-button);
+        border: var(--border-box-button-create-gif);
+        background-color: var(--color-background-button);
+        cursor: pointer; }
+
+#section_video_show {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center; }
+  #section_video_show .video_gif {
+    width: 70%; }
+    #section_video_show .video_gif video {
+      margin: 10px 0px 24px 0px;
+      -webkit-transform: scaleX(-1);
+      transform: scaleX(-1); }
+    #section_video_show .video_gif .button_camera {
+      font-family: var(--font-family-principal);
+      color: var(--color-font-button1);
+      width: 36px;
+      height: 36px;
+      font-size: 16px;
+      box-shadow: var(--box-shadow-button);
+      border: var(--border-box-button-create-gif);
+      background-color: var(--color-background-button);
+      cursor: pointer; }
+
+.lupa_path {
+  fill: var(--color-lupa); }
+
+.dropdown {
+  fill: var(--color-font-button); }
 
 * {
   box-sizing: border-box;
