--- a/css/_top-input-section.scss
+++ b/css/_top-input-section.scss
@@ -1,7 +1,7 @@
 body{
     .contenedor{
         .contenedor_center{
-            #section-results-suggested,#section-results-trends,#section-results-search{
+            #section-results-suggested,#section-results-trends,#section-results-search,#section-results-myGif{
                 margin-top: 64px;            
             
                 .top_input_section{
