--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -47,6 +47,11 @@
 --color-dropdown: #110038;
 --color-lupa: #B4B4B4;
 
+//Variables button Record
+--color-background-button-record: #FF6161;
+--box-shadow-button-record: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
+
+
 }
 
 
