--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,9 @@
   --box-shadow-button-gif: inset -1px -1px 0 0 #284F99, inset 1px 1px 0 0 #FFFFFF;
   --border-box-button-create-gif: 1px solid #110038;
   --color-dropdown: #110038;
-  --color-lupa: #B4B4B4; }
+  --color-lupa: #B4B4B4;
+  --color-background-button-record: #FF6161;
+  --box-shadow-button-record: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF; }
 
 body .top_bar {
   margin: 1px 0px;
@@ -219,9 +221,9 @@ body .contenedor .contenedor_center .search_input #results_suggested {
   body .contenedor .contenedor_center .search_input #results_suggested .div_empty {
     width: 12%; }
 
-body .contenedor .contenedor_center #section-results-suggested, body .contenedor .contenedor_center #section-results-trends, body .contenedor .contenedor_center #section-results-search {
+body .contenedor .contenedor_center #section-results-suggested, body .contenedor .contenedor_center #section-results-trends, body .contenedor .contenedor_center #section-results-search, body .contenedor .contenedor_center #section-results-myGif {
   margin-top: 64px; }
-  body .contenedor .contenedor_center #section-results-suggested .top_input_section, body .contenedor .contenedor_center #section-results-trends .top_input_section, body .contenedor .contenedor_center #section-results-search .top_input_section {
+  body .contenedor .contenedor_center #section-results-suggested .top_input_section, body .contenedor .contenedor_center #section-results-trends .top_input_section, body .contenedor .contenedor_center #section-results-search .top_input_section, body .contenedor .contenedor_center #section-results-myGif .top_input_section {
     font-family: var(--font-family-principal);
     color: var(--color-font-button1);
     font-size: 14px;
@@ -367,21 +369,102 @@ body .contenedor .contenedor_center #section-results-suggested, body .contenedor
   flex-flow: row nowrap;
   justify-content: center; }
   #section_video_show .video_gif {
-    width: 70%; }
+    width: 70%;
+    display: flex;
+    justify-content: center; }
     #section_video_show .video_gif video {
-      margin: 10px 0px 24px 0px;
       -webkit-transform: scaleX(-1);
-      transform: scaleX(-1); }
-    #section_video_show .video_gif .button_camera {
-      font-family: var(--font-family-principal);
-      color: var(--color-font-button1);
-      width: 36px;
-      height: 36px;
-      font-size: 16px;
-      box-shadow: var(--box-shadow-button);
-      border: var(--border-box-button-create-gif);
-      background-color: var(--color-background-button);
-      cursor: pointer; }
+      transform: scaleX(-1);
+      max-height: 480px; }
+    #section_video_show .video_gif .img_div {
+      display: flex;
+      justify-content: center;
+      margin: 10px 0px 24px 0px; }
+      #section_video_show .video_gif .img_div #video_grabado {
+        width: 600px;
+        height: 480px; }
+    #section_video_show .video_gif #subiendo_gif {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 98%;
+      margin-left: 8px;
+      height: 480px;
+      background-color: white; }
+      #section_video_show .video_gif #subiendo_gif #globe_img {
+        width: 48px;
+        margin-bottom: 8px; }
+      #section_video_show .video_gif #subiendo_gif #bar_img {
+        width: 324px;
+        margin-top: 41px;
+        margin-bottom: 8px; }
+    #section_video_show .video_gif #finished_gif {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 98%;
+      margin-left: 8px; }
+      #section_video_show .video_gif #finished_gif #title_buttons_div {
+        display: flex;
+        width: 40%;
+        flex-direction: column;
+        justify-content: center; }
+        #section_video_show .video_gif #finished_gif #title_buttons_div .video_grabado_img_div #video_grabado_img {
+          width: 365px;
+          height: 200px; }
+        #section_video_show .video_gif #finished_gif #title_buttons_div .button_white {
+          font-family: var(--font-family-principal);
+          color: var(--color-font-button1);
+          width: 256px;
+          height: 36px;
+          font-size: 16px;
+          box-shadow: var(--box-shadow-button);
+          border: var(--border-box-button-create-gif);
+          margin: 16px 0 14px 0;
+          background-color: var(--color-background-button1-menu);
+          cursor: pointer; }
+    #section_video_show .video_gif .create_gif_button {
+      margin-top: 37px; }
+      #section_video_show .video_gif .create_gif_button #start_btn {
+        display: flex;
+        flex-flow: row nowrap; }
+        #section_video_show .video_gif .create_gif_button #start_btn .button_camera {
+          font-family: var(--font-family-principal);
+          color: var(--color-font-button1);
+          width: 36px;
+          height: 36px;
+          align-items: center;
+          box-shadow: var(--box-shadow-button);
+          border: var(--border-box-button-create-gif);
+          background-color: var(--color-background-button);
+          cursor: pointer; }
+        #section_video_show .video_gif .create_gif_button #start_btn:hover {
+          background-color: var(--color-background-button-hover);
+          box-shadow: var(--box-shadow-button-hover); }
+      #section_video_show .video_gif .create_gif_button #listo_btn {
+        display: flex;
+        flex-flow: row nowrap; }
+        #section_video_show .video_gif .create_gif_button #listo_btn .button_record {
+          font-family: var(--font-family-principal);
+          color: var(---color-font-top-bar);
+          width: 36px;
+          height: 36px;
+          align-items: center;
+          box-shadow: var(--box-shadow-button-record);
+          border: var(--border-box-button-create-gif);
+          background-color: var(--color-background-button-record);
+          cursor: pointer; }
+        #section_video_show .video_gif .create_gif_button #listo_btn .button_red {
+          font-family: var(--font-family-principal);
+          color: var(--color-font-top-bar);
+          width: 144px;
+          height: 36px;
+          font-size: 16px;
+          box-shadow: var(--box-shadow-button-record);
+          border: var(--border-box-button-create-gif);
+          background-color: var(--color-background-button-record);
+          cursor: pointer; }
 
 .lupa_path {
   fill: var(--color-lupa); }
