--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,7 +36,9 @@ body{
         
         .contenedor_center{
             width: 90%;
-    
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
 
            
